// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentArticleLookup should render with SBA Offices when provided 1`] = `
<div>
  <div
    className="twoLineBanner"
    data-testid="lookup-field-section"
  >
    <h2
      className="header"
      tabIndex="0"
    >
      This is a title
    </h2>
    <div>
      <div
        className="searchBox"
      >
        <div
          className="text-input textInput"
          data-testid="document-lookup-text-input-container"
          id="document-lookup-text-input-container"
        >
          <label
            className={null}
            data-testid="document-lookup-text-input-label"
            htmlFor="document-lookup-text-input"
          >
            Search
          </label>
          <div
            className="container"
          >
            <input
              aria-labelledby="document-lookup-text-input"
              className="input"
              data-testid="document-lookup-text-input"
              id="document-lookup-text-input"
              inputMode="text"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              placeholder="Search by title or number"
              required={true}
              type="text"
            />
          </div>
        </div>
        <div
          className="searchIcon"
        >
          <i
            className="search fa fa-search"
          />
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="title-select"
          data-testid="title-select"
        >
          <label
            htmlFor="title-select"
          >
            Title
          </label>
          <div
            className="Select is-clearable is-searchable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-6--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  className="Select-input"
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-activedescendant="react-select-6--value"
                    aria-expanded="false"
                    aria-haspopup="false"
                    aria-owns=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    role="combobox"
                    style={
                      Object {
                        "boxSizing": "content-box",
                        "width": "5px",
                      }
                    }
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="lightsabercolor-select"
          data-testid="lightsabercolor-select"
        >
          <label
            htmlFor="lightsabercolor-select"
          >
            Lightsaber Color
          </label>
          <div
            className="Select is-clearable is-searchable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-7--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  className="Select-input"
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-activedescendant="react-select-7--value"
                    aria-expanded="false"
                    aria-haspopup="false"
                    aria-owns=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    role="combobox"
                    style={
                      Object {
                        "boxSizing": "content-box",
                        "width": "5px",
                      }
                    }
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="movie-select"
          data-testid="movie-select"
        >
          <label
            htmlFor="movie-select"
          >
            Movie
          </label>
          <div
            className="Select is-clearable is-searchable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-8--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  className="Select-input"
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-activedescendant="react-select-8--value"
                    aria-expanded="false"
                    aria-haspopup="false"
                    aria-owns=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    role="combobox"
                    style={
                      Object {
                        "boxSizing": "content-box",
                        "width": "5px",
                      }
                    }
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="status-select"
          data-testid="status-select"
        >
          <label
            htmlFor="status-select"
          >
            Status
          </label>
          <div
            className="Select is-clearable is-searchable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-9--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  className="Select-input"
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-activedescendant="react-select-9--value"
                    aria-expanded="false"
                    aria-haspopup="false"
                    aria-owns=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    role="combobox"
                    style={
                      Object {
                        "boxSizing": "content-box",
                        "width": "5px",
                      }
                    }
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="office"
          data-testid="office"
        >
          <label
            htmlFor="office"
          >
            Office
          </label>
          <div
            className="Select is-clearable is-searchable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-10--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  className="Select-input"
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-activedescendant="react-select-10--value"
                    aria-expanded="false"
                    aria-haspopup="false"
                    aria-owns=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    role="combobox"
                    style={
                      Object {
                        "boxSizing": "content-box",
                        "width": "5px",
                      }
                    }
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="leftApplyButton"
      >
        <button
          className="button alternate large primary responsive spacing"
          data-testid="button"
          onClick={
            [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
        >
          Apply
        </button>
      </div>
    </div>
  </div>
  <div
    className="result"
  >
    <div
      className="paginator"
    >
      <div
        aria-label="Showing results 5 to 8 out of 42"
        className="paginator"
        role="group"
      >
        <span
          data-testid="showing results text"
        >
          Showing 
          <strong
            className="text-primary"
          >
            5
          </strong>
           
          <span
            className="spacing"
          >
            -
          </span>
           
          <strong
            className="text-primary"
          >
            8
          </strong>
           
          <span
            className="spacing"
          >
            of
          </span>
           
          <strong
            className="text-primary"
          >
            42
          </strong>
        </span>
        <button
          aria-label="Go to previous results"
          className="button large secondary"
          data-testid="previous button"
          onClick={[Function]}
        >
          <i
            alt="previous page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-left"
          />
        </button>
        <button
          aria-label="Go to next results"
          className="button large secondary"
          data-testid="next button"
          onClick={[Function]}
        >
          <i
            alt="next page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-right"
          />
        </button>
      </div>
    </div>
    <div
      className="documentCardCollection"
    >
      <div
        className="detail-card-collection detailCardCollection"
        data-cy="detail-card-collection"
      >
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Master
              </a>
            </h6>
            <div>
              <div
                className="dashContainer"
              >
                <hr
                  className="dash dash"
                  style={
                    Object {
                      "width": "336px",
                    }
                  }
                />
              </div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Knight
              </a>
            </h6>
            <div>
              <div
                className="dashContainer"
              >
                <hr
                  className="dash dash"
                  style={
                    Object {
                      "width": "336px",
                    }
                  }
                />
              </div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Master
              </a>
            </h6>
            <div>
              <div
                className="dashContainer"
              >
                <hr
                  className="dash dash"
                  style={
                    Object {
                      "width": "336px",
                    }
                  }
                />
              </div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Knight
              </a>
            </h6>
            <div>
              <div
                className="dashContainer"
              >
                <hr
                  className="dash dash"
                  style={
                    Object {
                      "width": "336px",
                    }
                  }
                />
              </div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="paginator"
    >
      <div
        aria-label="Showing results 5 to 8 out of 42"
        className="paginator"
        role="group"
      >
        <span
          data-testid="showing results text"
        >
          Showing 
          <strong
            className="text-primary"
          >
            5
          </strong>
           
          <span
            className="spacing"
          >
            -
          </span>
           
          <strong
            className="text-primary"
          >
            8
          </strong>
           
          <span
            className="spacing"
          >
            of
          </span>
           
          <strong
            className="text-primary"
          >
            42
          </strong>
        </span>
        <button
          aria-label="Go to previous results"
          className="button large secondary"
          data-testid="previous button"
          onClick={[Function]}
        >
          <i
            alt="previous page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-left"
          />
        </button>
        <button
          aria-label="Go to next results"
          className="button large secondary"
          data-testid="next button"
          onClick={[Function]}
        >
          <i
            alt="next page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-right"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DocumentArticleLookup should render with all the information 1`] = `
<div>
  <div
    className="oneLineBanner"
    data-testid="lookup-field-section"
  >
    <h2
      className="header"
      tabIndex="0"
    >
      This is a title
    </h2>
    <div>
      <div
        className="searchBox"
      >
        <div
          className="text-input textInput"
          data-testid="document-lookup-text-input-container"
          id="document-lookup-text-input-container"
        >
          <label
            className={null}
            data-testid="document-lookup-text-input-label"
            htmlFor="document-lookup-text-input"
          >
            Search
          </label>
          <div
            className="container"
          >
            <input
              aria-labelledby="document-lookup-text-input"
              className="input"
              data-testid="document-lookup-text-input"
              id="document-lookup-text-input"
              inputMode="text"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              placeholder="Search by title or number"
              required={true}
              type="text"
            />
          </div>
        </div>
        <div
          className="searchIcon"
        >
          <i
            className="search fa fa-search"
          />
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="title-select"
          data-testid="title-select"
        >
          <label
            htmlFor="title-select"
          >
            Title
          </label>
          <div
            className="Select is-clearable is-searchable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-2--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  className="Select-input"
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-activedescendant="react-select-2--value"
                    aria-expanded="false"
                    aria-haspopup="false"
                    aria-owns=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    role="combobox"
                    style={
                      Object {
                        "boxSizing": "content-box",
                        "width": "5px",
                      }
                    }
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="lightsabercolor-select"
          data-testid="lightsabercolor-select"
        >
          <label
            htmlFor="lightsabercolor-select"
          >
            Lightsaber Color
          </label>
          <div
            className="Select is-clearable is-searchable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-3--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  className="Select-input"
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-activedescendant="react-select-3--value"
                    aria-expanded="false"
                    aria-haspopup="false"
                    aria-owns=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    role="combobox"
                    style={
                      Object {
                        "boxSizing": "content-box",
                        "width": "5px",
                      }
                    }
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="movie-select"
          data-testid="movie-select"
        >
          <label
            htmlFor="movie-select"
          >
            Movie
          </label>
          <div
            className="Select is-clearable is-searchable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-4--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  className="Select-input"
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-activedescendant="react-select-4--value"
                    aria-expanded="false"
                    aria-haspopup="false"
                    aria-owns=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    role="combobox"
                    style={
                      Object {
                        "boxSizing": "content-box",
                        "width": "5px",
                      }
                    }
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="status-select"
          data-testid="status-select"
        >
          <label
            htmlFor="status-select"
          >
            Status
          </label>
          <div
            className="Select is-clearable is-searchable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-5--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  className="Select-input"
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-activedescendant="react-select-5--value"
                    aria-expanded="false"
                    aria-haspopup="false"
                    aria-owns=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    role="combobox"
                    style={
                      Object {
                        "boxSizing": "content-box",
                        "width": "5px",
                      }
                    }
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rightApplyButton"
      >
        <button
          className="button alternate large primary responsive spacing"
          data-testid="button"
          onClick={[MockFunction]}
        >
          Apply
        </button>
      </div>
    </div>
  </div>
  <div
    className="result"
  >
    <div
      className="paginator"
    >
      <div
        aria-label="Showing results 5 to 8 out of 42"
        className="paginator"
        role="group"
      >
        <span
          data-testid="showing results text"
        >
          Showing 
          <strong
            className="text-primary"
          >
            5
          </strong>
           
          <span
            className="spacing"
          >
            -
          </span>
           
          <strong
            className="text-primary"
          >
            8
          </strong>
           
          <span
            className="spacing"
          >
            of
          </span>
           
          <strong
            className="text-primary"
          >
            42
          </strong>
        </span>
        <button
          aria-label="Go to previous results"
          className="button large secondary"
          data-testid="previous button"
          onClick={[Function]}
        >
          <i
            alt="previous page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-left"
          />
        </button>
        <button
          aria-label="Go to next results"
          className="button large secondary"
          data-testid="next button"
          onClick={[Function]}
        >
          <i
            alt="next page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-right"
          />
        </button>
      </div>
    </div>
    <div
      className="documentCardCollection"
    >
      <div
        className="detail-card-collection detailCardCollection"
        data-cy="detail-card-collection"
      >
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Master
              </a>
            </h6>
            <div>
              <div
                className="dashContainer"
              >
                <hr
                  className="dash dash"
                  style={
                    Object {
                      "width": "336px",
                    }
                  }
                />
              </div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Knight
              </a>
            </h6>
            <div>
              <div
                className="dashContainer"
              >
                <hr
                  className="dash dash"
                  style={
                    Object {
                      "width": "336px",
                    }
                  }
                />
              </div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Master
              </a>
            </h6>
            <div>
              <div
                className="dashContainer"
              >
                <hr
                  className="dash dash"
                  style={
                    Object {
                      "width": "336px",
                    }
                  }
                />
              </div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Knight
              </a>
            </h6>
            <div>
              <div
                className="dashContainer"
              >
                <hr
                  className="dash dash"
                  style={
                    Object {
                      "width": "336px",
                    }
                  }
                />
              </div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="paginator"
    >
      <div
        aria-label="Showing results 5 to 8 out of 42"
        className="paginator"
        role="group"
      >
        <span
          data-testid="showing results text"
        >
          Showing 
          <strong
            className="text-primary"
          >
            5
          </strong>
           
          <span
            className="spacing"
          >
            -
          </span>
           
          <strong
            className="text-primary"
          >
            8
          </strong>
           
          <span
            className="spacing"
          >
            of
          </span>
           
          <strong
            className="text-primary"
          >
            42
          </strong>
        </span>
        <button
          aria-label="Go to previous results"
          className="button large secondary"
          data-testid="previous button"
          onClick={[Function]}
        >
          <i
            alt="previous page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-left"
          />
        </button>
        <button
          aria-label="Go to next results"
          className="button large secondary"
          data-testid="next button"
          onClick={[Function]}
        >
          <i
            alt="next page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-right"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
